--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </button>
 
         <!-- Logo text or image -->
-        <a><img src="/img/logo/sfplogo.jpg" style=" height: 100px; widows: 200px;"  class="navbar-brand" href="index.html"></a>
+        <a><img src="/SPF-Construction-company/img/logo/sfplogo.jpg" style=" height: 100px; widows: 200px;"  class="navbar-brand" href="index.html"></a>
       
       </div>
       <div class="d-inline-block site-menu">
@@ -57,8 +57,8 @@
             <div class="carousel-background"><img src="img/intro/1.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animated fadeInDown">Alstar web studio</h2>
-                <p class="animated fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+                <h2 class="animated fadeInDown">SPF Construction Company</h2>
+                <p class="animated fadeInUp">We pride ourselves in our integrity and commitment to quality, safety and our ability to deliver projects economically for our clients..</p>
                 <a href="#about" class="btn-get-started animated fadeInUp">Read More</a>
                 <a href="#about" class="btn-get-started animated fadeInUp">Read More</a>
               </div>
@@ -70,21 +70,20 @@
             <div class="carousel-background"><img src="img/intro/2.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animated fadeInDown">Creativity and technology</span></h2>
-                <p class="animated fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+                <h2 class="animated fadeInDown">Creativity and Technology</span></h2>
+                <p class="animated fadeInUp">We are construction company that aims to provide you with the best construction services</p>
                 <a href="#about" class="btn-get-started animated fadeInUp">Read More</a>
                 <a href="#about" class="btn-get-started animated fadeInUp">Read More</a>
               </div>
             </div>
           </div>
-
           <!-- Slide 3 -->
           <div class="item">
             <div class="carousel-background"><img src="img/intro/3.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animated fadeInDown">Sequi ea ut et est quaerat</span></h2>
-                <p class="animated fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+                <h2 class="animated fadeInDown">Our Strategy</span></h2>
+                <p class="animated fadeInUp">SFP has operated in the informal sector for 4 years focusing on small housing development and midrange public building.</p>
                 <a href="#about" class="btn-get-started animated fadeInUp">Read More</a>
                 <a href="#about" class="btn-get-started animated fadeInUp">Read More</a>
               </div>
@@ -96,8 +95,8 @@
             <div class="carousel-background"><img src="img/intro/4.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animated fadeInDown">Sequi ea ut et est quaerat</span></h2>
-                <p class="animated fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+                <h2 class="animated fadeInDown">Empowering our Clients</span></h2>
+                <p class="animated fadeInUp">The Directors between them have combined international and local construction experience of more than 40 years in the building and civil engineering space, anchoring landmark projects in Lagos from several multilevel skyscrapers to tens of thousands of industrial productions facilities to luxury residential development in Victoria Island, Ikoyi and Banana Island..</p>
                 <a href="#about" class="btn-get-started animated fadeInUp">Read More</a>
                 <a href="#about" class="btn-get-started animated fadeInUp">Read More</a>
               </div>
@@ -122,9 +121,9 @@
   </section><!-- #intro -->
 
   <!-- About -->
-  <section id="about" class="home-section bg-white">
+  <section id="about" class="home-section bg-white mt-5">
     <div class="container">
-      <div class="row">
+      <div class="row" style="margin-top:-120px">
         <div class="col-md-offset-2 col-md-8">
           <div class="section-heading">
             <h2>Who We Are</h2>
@@ -139,18 +138,17 @@
           <img src="img/about-img.png" alt="">
         </div>
 
-        <div class="col-md-6 content">
+        <div class="col-md-6">
           <h3>WE ARE A CORPORATE COMPANY THAT AIMS TO PROVIDE YOU WITH THE BEST CONSTRUCTION SERVICES.</h3>
-          <!-- <h3 class="text-justify">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-            laborum.</h3>
+          <h2 class="section-heading">OUR STRATEGY</h2>
+          <div class="heading-line"></div>
           <p class="text-justify">
-            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum Libero justo laoreet sit amet
-            cursus sit amet dictum sit. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend
-            donec Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-            laborum
-          </p> -->
+            Our market strategy is to adopt a construction management approach by leveraging the trade capabilities that are available locally
+             (due to the long industry experience of our partners) and integrating this with our project management
+              expertise to deliver outstanding projects for our clients.  With a vast range of experience in Commercial,
+               Residential and Industrial engineering projects, SFP focuses on best Value Engineering practices ensuring that clients
+                do not spend more than they should.
+          </p>
         </div>
       </div>
     </div>
@@ -191,7 +189,7 @@
   <!-- Services -->
   <section id="services" class="home-section bg-white">
     <div class="container">
-      <div class="row">
+      <div class="row" style="margin-top:-120px">
         <div class="col-md-offset-2 col-md-8">
           <div class="section-heading">
             <h2>Services</h2>
@@ -271,10 +269,10 @@
   <!-- Works -->
   <section id="portfolio" class="home-section bg-gray">
     <div class="container-fluid">
-      <div class="row">
+      <div class="row" style="margin-top:-120px">
         <div class="col-md-offset-2 col-md-8">
           <div class="section-heading">
-            <h2>Works</h2>
+            <h2>Previous Projects</h2>
             <div class="heading-line"></div>
             <p>We’ve been building unique digital products, platforms, and experiences for the past 6 years.</p>
           </div>
@@ -393,7 +391,7 @@
   <!-- Team -->
   <section id="team" class="home-section bg-white">
     <div class="container">
-      <div class="row">
+      <div class="row" style="margin-top:-120px">
         <div class="col-md-offset-2 col-md-8">
           <div class="section-heading">
             <h2>Our Team</h2>
@@ -407,15 +405,15 @@
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
           <div class="box-team wow bounceInUp" data-wow-delay="0.1s">
             <img src="img/team/1.png" alt="" class="img-circle img-responsive" />
-            <h4>Dominique Vroslav</h4>
-            <p>Contractor</p>
+            <h4>UCHE ISIADINSO</h4>
+            <span>EXECUTIVE DIRECTOR</span>
           </div>
         </div>
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.3s">
           <div class="box-team wow bounceInUp">
             <img src="img/team/2.png" alt="" class="img-circle img-responsive" />
-            <h4>Thomas Jeffersonn</h4>
-            <p>Builder</p>
+            <h4>JUSTIN NWAMPERE</h4>
+            <span>EXECUTIVE DIRECTOR</span>
           </div>
         </div>
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.5s">
@@ -439,7 +437,7 @@
   <!-- Contact -->
   <section id="contact" class="home-section bg-gray">
     <div class="container">
-      <div class="row">
+      <div class="row" style="margin-top:-120px">
         <div class="col-md-offset-2 col-md-8">
           <div class="section-heading">
             <h2>Contact us</h2>
@@ -503,13 +501,13 @@
   <!-- Bottom widget -->
   <section id="bottom-widget" class="home-section bg-white">
     <div class="container">
-      <div class="row">
+      <div class="row" style="margin-top:-120px">
         <div class="col-md-4">
           <div class="contact-widget wow bounceInLeft">
             <i class="fa fa-map-marker fa-4x"></i>
             <h5>Main Office</h5>
             <p>
-              109 Borough High Street,<br />London SE1 1NL
+                Wing B, Motorways Complex, Motorways Avenue,<br> Ikeja, Lagos State, Nigeria
             </p>
           </div>
         </div>
@@ -518,8 +516,7 @@
             <i class="fa fa-phone fa-4x"></i>
             <h5>Call</h5>
             <p>
-              +234 70604920<br> +234 7060499623
-
+                +(234) 803 327 8774 <br> +(234) 808 934 2740
             </p>
           </div>
         </div>
@@ -528,7 +525,7 @@
             <i class="fa fa-envelope fa-4x"></i>
             <h5>Email us</h5>
             <p>
-              hello@alstarstudio.com<br />sales@alstarstudio.com
+                info@sfpconstruct.com
             </p>
           </div>
         </div>
@@ -580,7 +577,7 @@
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Alstar
             -->
-            Designed by <a href="https://eyitreezy@gmail.com/">SPF</a>
+            Designed by <a href="">SPF</a>
           </div>
         </div>
       </div>
