Modified the home page to a resonable extend

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Solomon's Project</title>
+  <title>SPF Construtions</title>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- css -->
@@ -121,7 +121,7 @@
   </section><!-- #intro -->
 
   <!-- About -->
-  <section id="about" class="home-section bg-white mt-5">
+  <section id="about" class="home-section bg-white mt-5" style="margin-bottom:-120px">
     <div class="container">
       <div class="row" style="margin-top:-120px">
         <div class="col-md-offset-2 col-md-8">
@@ -134,13 +134,24 @@
         </div>
       </div>
       <div class="row wow fadeInUp">
-        <div class="col-md-6 about-img">
-          <img src="img/about-img.png" alt="">
-        </div>
+          <div class="col-md-6">
+              <h3>We are a corporate company that aims to provide you with the best construction services.</h3>
+              
+              <h2 class="section-heading">OUR STRATEGY</h2>  
+              <div class="heading-line"></div>
+              <p class="text-justify">
+                Our market strategy is to adopt a construction management approach by leveraging the trade capabilities that are available locally
+                 (due to the long industry experience of our partners) and integrating this with our project management
+                  expertise to deliver outstanding projects for our clients.  With a vast range of experience in Commercial,
+                   Residential and Industrial engineering projects, SFP focuses on best Value Engineering practices ensuring that clients
+                    do not spend more than they should.
+              </p>
+            </div>
 
         <div class="col-md-6">
-          <h3>WE ARE A CORPORATE COMPANY THAT AIMS TO PROVIDE YOU WITH THE BEST CONSTRUCTION SERVICES.</h3>
-          <h2 class="section-heading">OUR STRATEGY</h2>
+          <h3>We are a corporate company that aims to provide you with the best construction services.</h3>
+          
+          <h2 class="section-heading">OUR STRATEGY</h2>  
           <div class="heading-line"></div>
           <p class="text-justify">
             Our market strategy is to adopt a construction management approach by leveraging the trade capabilities that are available locally
@@ -389,7 +400,7 @@
   </section>
 
   <!-- Team -->
-  <section id="team" class="home-section bg-white">
+  <section id="team" class="home-section bg-white" style="margin-bottom:-120px">
     <div class="container">
       <div class="row" style="margin-top:-120px">
         <div class="col-md-offset-2 col-md-8">
@@ -435,7 +446,7 @@
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="home-section bg-gray">
+  <section id="contact" class="home-section bg-gray" style="margin-bottom:-120px">
     <div class="container">
       <div class="row" style="margin-top:-120px">
         <div class="col-md-offset-2 col-md-8">
@@ -531,7 +542,7 @@
         </div>
       </div>
       <div class="row mar-top30">
-        <div class="col-md-12">
+        <div class="col-md-12" style="margin-bottom:-120px">
           <h5>We're on social networks</h5>
           <ul class="social-network">
             <li><a href="#">
