Arranged the images Accordingly

--- a/index.html
+++ b/index.html
@@ -12,13 +12,6 @@
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href="css/style.css" rel="stylesheet" media="screen">
   <link href="color/default.css" rel="stylesheet" media="screen">
-
-  <!-- =======================================================
-    Theme Name: Alstar
-    Theme URL: https://bootstrapmade.com/alstar-free-parallax-bootstrap-template/
-    Author: BootstrapMade.com
-    Author URL: https://bootstrapmade.com
-  ======================================================= -->
 </head>
 <!-- This is the best outcome of the best construction website -->
 
@@ -166,7 +159,7 @@
 
   <section class="services">
     <div class="container">
-      <div class="row">
+      <div class="row" style="margin-top:-100px">
         <div class="col-md-4">
           <div class="service-item first-service">
             <div class="service-icon"></div>
@@ -180,7 +173,7 @@
           <div class="service-item second-service">
             <div class="service-icon"></div>
             <h4>Strategy</h4>
-            <p class="text-justify">adoption of a construction management approach by leveraging the trade capabilities
+            <p class="text-justify">Adoption of a construction management approach by leveraging the trade capabilities
               that are available locally and integrating this with our project management expertise to deliver
               outstanding projects for our clients.</p>
             </a>
@@ -328,31 +321,31 @@
 
           <ul id="og-grid" class="og-grid">
             <li>
-              <a href="https://bootstrapmade.com" data-largesrc="img/works/1.jpg" data-title="Portfolio title"
+              <a href="https://bootstrapmade.com" data-largesrc="img/works/enlarge1.jpg" data-title="Portfolio title"
                 data-description="Duo te dico volutpat, unum elit oblique per id. Ne duo mollis sapientem intellegebat. Per at augue vidisse percipit, pri vocibus assueverit interesset ut, no dolore luptatum incorrupte nec. In mentitum forensibus nec, nibh eripuit ut pri, tale illud voluptatum ut sea. Sed oratio repudiare ei, cum an magna labitur, eu atqui augue mei. Pri consul detracto eu, solet nusquam accusam ex vim, an movet interesset necessitatibus mea.">
                 <img src="img/works/thumbs/1.jpg" alt="" />
               </a>
             </li>
             <li>
-              <a href="https://bootstrapmade.com" data-largesrc="img/works/2.jpg" data-title="Portfolio title"
+              <a href="https://bootstrapmade.com" data-largesrc="img/works/enlarge2.jpg" data-title="Portfolio title"
                 data-description="Mea an eros periculis dignissim, quo mollis nostrum elaboraret et. Id quem perfecto mel, no etiam perfecto qui. No nisl legere recusabo nam, ius an tale pericula evertitur, dicat phaedrum qui in. Usu numquam legendos in, voluptaria sadipscing ut vel. Eu eum mandamus volutpat gubergren, eos ad detracto nominati, ne eum idque elitr aliquam.">
                 <img src="img/works/thumbs/2.jpg" alt="" />
               </a>
             </li>
             <li>
-              <a href="https://bootstrapmade.com" data-largesrc="img/works/3.jpg" data-title="Portfolio title"
+              <a href="https://bootstrapmade.com" data-largesrc="img/works/enlarge3.jpg" data-title="Portfolio title"
                 data-description="Vim ad persecuti appellantur. Eam ignota deterruisset eu, in omnis fierent convenire sed. Ne nulla veritus vel, liber euripidis in eos. Postea comprehensam vis in, detracto deseruisse mei ea. Ex sadipscing deterruisset concludaturque quo.">
                 <img src="img/works/thumbs/3.jpg" alt="img01" />
               </a>
             </li>
             <li>
-              <a href="https://bootstrapmade.com" data-largesrc="img/works/4.jpg" data-title="Portfolio title"
+              <a href="https://bootstrapmade.com" data-largesrc="img/works/enlarge4.jpg" data-title="Portfolio title"
                 data-description="In mentitum forensibus nec, nibh eripuit ut pri, tale illud voluptatum ut sea. Sed oratio repudiare ei, cum an magna labitur, eu atqui augue mei. Pri consul detracto eu, solet nusquam accusam ex vim, an movet interesset necessitatibus mea.">
                 <img src="img/works/thumbs/4.jpg" alt="img01" />
               </a>
             </li>
             <li>
-              <a href="https://bootstrapmade.com" data-largesrc="img/works/5.jpg" data-title="Portfolio title"
+              <a href="https://bootstrapmade.com" data-largesrc="img/works/enlarge5.jpg" data-title="Portfolio title"
                 data-description="Duo te dico volutpat, unum elit oblique per id. Ne duo mollis sapientem intellegebat. Per at augue vidisse percipit, pri vocibus assueverit interesset ut, no dolore luptatum incorrupte nec. In mentitum forensibus nec, nibh eripuit ut pri, tale illud voluptatum ut sea">
                 <img src="img/works/thumbs/5.png" alt="img01" />
                 <div class="overlay">
@@ -361,7 +354,7 @@
               </a>
             </li>
             <li>
-              <a href="https://bootstrapmade.com" data-largesrc="img/works/6.jpg" data-title="Portfolio title"
+              <a href="https://bootstrapmade.com" data-largesrc="img/works/enlarge6.jpg" data-title="Portfolio title"
                 data-description="Duo te dico volutpat, unum elit oblique per id. Ne duo mollis sapientem intellegebat. Per at augue vidisse percipit, pri vocibus assueverit interesset ut, no dolore luptatum incorrupte nec. In mentitum forensibus nec, nibh eripuit ut pri, tale illud voluptatum ut sea">
                 <img src="img/works/thumbs/6.jpg" alt="img01" />
               </a>
