--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <div class="row">
                   <div class="col-sm-12 col-md-offset-1 col-md-6">
                     <div class="wow bounceInLeft">
-                      <h4>Website Design</h4>
+                      <h4>Construction of Magnificent Structures</h4>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna.</p>
                     </div>
@@ -664,7 +664,7 @@
 
   <!-- Contact -->
   <section id="contact" class="home-section bg-gray">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row" style="margin-top:-100px">
         <div class="col-md-offset-2 col-md-8">
           <div class="section-heading">
@@ -732,8 +732,8 @@
         <div class=" col-md-6">
           <div id="map">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3963.3828221527356!2d3.272841614714085!3d6.5992549241090295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b90689d9d7a4f%3A0x674ead4639840eb5!2s239%201st%20Avenue%2C%20113%20Rd%2C%20Idimu%2C%20Lagos!5e0!3m2!1sen!2sng!4v1576101018077!5m2!1sen!2sng"
-              width="80%" height="390" frameborder="0" style="border:0;" allowfullscreen></iframe>
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3963.377669129069!2d3.3748780145223405!3d6.599898795227124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b9257aea78bbd%3A0x9ab0fc0e56801aa1!2sMotorways%20Centre!5e0!3m2!1sen!2sng!4v1577018196640!5m2!1sen!2sng"
+              width="90%" height="400" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
           </div>
         </div>
       </div>
@@ -806,7 +806,7 @@
         <div class="col-md-12">
           <p>Copyright &copy; SFP. All rights reserved.</p>
           <div class="credits">
-            Designed by <a href="https://eyitreezy@gmail.com/">Lomon</a> <br>
+            Designed by <a href="">SFP</a> <br>
             <a class="credits" href="index.html"><img src="img/logo1.png"
                 style="width:70px; height:50px; margin-bottom:5px;" alt="SFP Logo"></a>
           </div>
